--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -12,16 +12,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -39,107 +30,18 @@
     "from Level import Level\n",
     "from Make_Sounds import ouch_sound, thud_sound\n",
     "from Keyboard import Keyboard\n",
+    "from Play_Level import play_level\n",
     "\n",
     "\n",
     "# Initialize game\n",
     "gameDisplay = pygame.display.set_mode(display_size)\n",
-    "pygame.display.set_caption('Boxy!')\n",
-    "sky = (205, 230, 247)\n",
     "clock = pygame.time.Clock()\n",
-    "\n",
-    "\n",
-    "\n",
-    "#screen2 = Body(np.array(display_size)/2,np.array(display_size)/2,corporeal=True,solid=False,velocity=[0,0])   \n",
-    "#screen2.shapes = [Shape(screen.self_shape(),color = None,line_color = (0,0,0))]\n",
-    "\n",
-    "# Object holding all level Bodies and scenery\n",
-    "level = Level(num=0) # right now level 0\n",
-    "\n",
-    "\n",
-    "# Object to determine what to draw on screen (anything non overlapping isn't drawn)\n",
-    "screen = Body([level.player_start[0],display_size[1]/2],np.array(display_size)/2,corporeal=True,solid=False,velocity=[0,0])   \n",
-    "\n",
-    "\n",
-    "#level.background_list.append(screen2)\n",
-    "\n",
-    "death_delay = 60 # time after player's death that the level keeps tickin'\n",
-    "crashed = death_delay # start with a completed crash cycle to initalize everything\n",
     "\n",
     "# initialize keyboard object to take in control data and feed it to the player object\n",
     "keyboard = Keyboard()\n",
     "\n",
-    "while True: # play the game\n",
+    "play_level(0,keyboard,gameDisplay,clock)\n",
     "\n",
-    "##############################################################################\n",
-    "    # Handle player death and level reset\n",
-    "    \n",
-    "    if crashed or character.pos[1]>(1.5*display_size[1]): # player off screen = dead!\n",
-    "        if crashed == death_delay:\n",
-    "            character = Player(level.player_start)\n",
-    "            crashed = 0\n",
-    "            level.reset()\n",
-    "            character.current_status = Status(lives = 14, fruit = 85, boxes = 0) # arbitrary start for now\n",
-    "            keyboard.reset()\n",
-    "        else:    \n",
-    "            crashed += 1\n",
-    "            \n",
-    "        if crashed == 2: # just died, play ouch sound!\n",
-    "            ouch_sound()\n",
-    "\n",
-    "\n",
-    "##############################################################################\n",
-    "    # Note keyboard inputs and store them (including killing player by quitting)\n",
-    "    \n",
-    "    keyboard.handle_in_game_events(pygame.event.get())\n",
-    "      \n",
-    "    if keyboard.crashed and not crashed: # if q key pressed, character is dead\n",
-    "        crashed = 1\n",
-    "\n",
-    "##############################################################################    \n",
-    "    # Move every non-player object and resolve their interactions, including explosions\n",
-    "    \n",
-    "    level.move_objects()\n",
-    "    level.explosions(character) # these can also affect character\n",
-    "\n",
-    "##############################################################################\n",
-    "    # [if player is alive] Evolve its state, move it, and resolve interactions with other bodies\n",
-    "\n",
-    "    if not crashed: # if player is dead, skip this part\n",
-    "          \n",
-    "        # determine player's state and velocity, then move\n",
-    "        character.evolve(keyboard)\n",
-    "        character.move()\n",
-    "          \n",
-    "        # sort box_list so that closest bodies interact first: prevents e.g. diagonally breaking boxes\n",
-    "        level.box_list = sorted(level.box_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
-    "        \n",
-    "       # squeeze = [[False,False],[False,False]]\n",
-    "     \n",
-    "        # all objects interact with the player (destroy boxes, get fruit, land on platforms, etc)\n",
-    "        level.interact(character)\n",
-    "            \n",
-    "        # some of these interactions might have killed ya. Then ya dead!\n",
-    "        if character.protection < 0:\n",
-    "            crashed = 1\n",
-    "        \n",
-    "\n",
-    "    \n",
-    "##############################################################################\n",
-    "    # Prepare canvas and draw visuals\n",
-    "\n",
-    "    # fill display with sky color and set center position for screen (only overlapping objects will draw)\n",
-    "    gameDisplay.fill(sky)\n",
-    "    screen.pos = np.array([character.pos[0],display_size[1]/2]) # location of the center of the screen\n",
-    "   \n",
-    "    # move all non-corporeal objects to the foreground, draw all bodies, and clean foreground list of dead objects\n",
-    "    level.draw_level(gameDisplay,screen,character)\n",
-    "\n",
-    "  #  sleep(0.1) # turned on for debugging\n",
-    "    pygame.display.update()\n",
-    "    clock.tick(35)\n",
-    "\n",
-    "##############################################################################\n",
-    "    \n",
     "pygame.quit()"
    ]
   },
@@ -194,6 +96,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -201,18 +110,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
