--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -94,17 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = [2,3,4]\n",
+    "y = [4,5,6]\n",
+    "z = [x,y]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n",
+      "3 5\n",
+      "4 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,j in zip(*z):\n",
+    "    print(i,j)"
+   ]
   },
   {
    "cell_type": "code",
