--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -11,7 +11,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-04-29T04:36:30.510Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -94,34 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = [2,3,4]\n",
-    "y = [4,5,6]\n",
-    "z = [x,y]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 4\n",
-      "3 5\n",
-      "4 6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i,j in zip(*z):\n",
-    "    print(i,j)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
