--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -13,7 +13,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-04-29T04:36:30.510Z"
+     "start_time": "2020-05-02T01:28:37.817Z"
     }
    },
    "outputs": [
@@ -53,7 +53,7 @@
     "# initialize keyboard object to take in control data and feed it to the player object\n",
     "keyboard = Keyboard()\n",
     "\n",
-    "play_level(0,keyboard,gameDisplay,clock)\n",
+    "play_level(1,keyboard,gameDisplay,clock)\n",
     "\n",
     "pygame.quit()"
    ]
@@ -123,6 +123,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
